[섹선 9] add CategoryItem xml files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="description_home_banner_image">홈화면 배너 이미지</string>
     <string name="title_logo_icon_description">title logo icon</string>
     <string name="description_product_thumbnail">상품 상세 대표 이미지</string>
+    <string name="label_category_new">NEW</string>
 </resources>
